feat: 草案にlocal storageのバージョニングについて記載

--- a/草案.md
+++ b/草案.md
@@ -74,7 +74,7 @@ erDiagram
 chrome extensionのlocal storageを利用。content scriptからはlocal storageに書き込む。
 後で、各デバイスでのlocal storageの同期のために、google storageやdropboxを利用可能にする。external pageを開いたタイミングで外部ストレージからlocal storageへ書き込みを行い、「デバイス間同期」ボタンを押下したタイミングでlocal storageから外部ストレージへの書き込みを行う。
 
-### architecture
+## architecture
 
 ```mermaid
 classDiagram
@@ -108,3 +108,23 @@ classDiagram
 ```
 
 Controllerはlogics/*.tsに適宜依存
+
+## local storageのバージョニング
+
+local storageへの保存形式のバージョニングは、LocalStorageServiceで行う。
+
+```ts
+type LocalStorageVer1Schema = {
+    version: 1
+    // ...
+}
+type LocalStorageVer2Schema = {
+    version: 2
+    // ...
+}
+function convertToLocalStorageVer2(localStorageVer1: LocalStorageVer1Schema){
+    // ...
+}
+```
+
+LocalStorageServiceは、インスタンス生成時local storageの`version`キーを読み込み、その値に応じてバージョンアップを行う。
