fix: review_planエンティティの内容に関する草案の修正

--- a/草案.md
+++ b/草案.md
@@ -49,10 +49,13 @@ erDiagram
         int(serial) id PK
         int answer_result_id FK
         date next_date "次回復習予定日"
+        boolean completed "復習完了フラグ"
     }
 
     answer_results ||--o| review_plans : answer_result_id
 ```
+
+review_plansのcompletedは、復習を実施した場合にtrueにする。本日分、またはそれより1つ前のanswer_resultsに紐づくreview_plansが復習日程の決め方に必要。
 
 ## chrome拡張機能に関する仕様
 
