fix: 復習ルールの修正

--- a/草案.md
+++ b/草案.md
@@ -17,7 +17,7 @@ QB国試の回答状況とそれに応じた復習間隔を管理し、適切な
 
 - 「-」または「×」の場合は、明日に復習
 - 「△」の場合は、今日のX日後に復習
-- 「◯」の場合は、今日の1.5X日後に復習(1.5Xは切り捨てで整数にする)
+- 「◯」の場合は、今日の1.5X日後に復習(1.5Xは切り上げて整数にする)
 - 「◎」の場合は、今日の2X日後に復習
 
 今日が前回回答日付のX日後、かつ、今日が復習予定日未満の場合、
