fix: localStorageバージョン変換に関する草案の修正

--- a/草案.md
+++ b/草案.md
@@ -125,7 +125,7 @@ type LocalStorageVer2Schema = {
     version: 2
     // ...
 }
-function convertToLocalStorageVer2(localStorageVer1: LocalStorageVer1Schema){
+async function convertToLocalStorageVer2(adapter: ILocalStorageAdapter){
     // ...
 }
 ```
