feat: entity/LocalStorageServiceに対する型付け

--- a/草案.md
+++ b/草案.md
@@ -90,7 +90,10 @@ classDiagram
     class ExternalPage {
         <<external page(index.html)>>
     }
-    class LocalStorageService
+    class ILocalStorageService
+    class LocalStorageService {
+        <<concrete>>
+    }
     class ILocalStorageAdapter
     class ChromeLocalStorageAdapter {
         <<concrete>>
@@ -102,8 +105,10 @@ classDiagram
     %% Relationships
     ContentScript --> AnswerContentScriptController : depends on
     ExternalPage --> IndexPageController : depends on
-    AnswerContentScriptController --> LocalStorageService : depends on
-    IndexPageController --> LocalStorageService : depends on
+    AnswerContentScriptController --> ILocalStorageService : depends on
+    IndexPageController --> ILocalStorageService : depends on
+    ILocalStorageService --> ILocalStorageAdapter : depends on
+    LocalStorageService --|> ILocalStorageService : implements
     LocalStorageService --> ILocalStorageAdapter : depends on
     ChromeLocalStorageAdapter --|> ILocalStorageAdapter : implements
     ChromeLocalStorageAdapter --> LocalStorage : depends on
