fix: 復習問題一覧の表示順序変更

--- a/草案.md
+++ b/草案.md
@@ -27,6 +27,23 @@ QB国試の回答状況とそれに応じた復習間隔を管理し、適切な
 
 連問(例えば115C72-115C74が1セットの場合)は、それぞれの小問(115C72, 115C73, 115C74)について上記のルールを適用する。
 
+## 復習問題一覧ページ
+
+popupのボタンで、復習問題一覧ページを開く
+
+### 一覧表
+
+復習予定日が今日あるいはそれ以前のreview planで未完了のものを、一覧表で表示する。表示内容は、
+
+- URL(連問の場合は1つのURLにまとめる)
+- 前回回答の結果(連問の場合、小問ごとの結果のうち最も低いものを取る)
+- 復習予定日(連問の場合、小問ごとの復習予定日のうち最も早いものを取る)
+
+順番は1.、2.で決める。
+
+1. 前回回答の結果(-×、△、◯、◎の順)
+2. 復習予定日昇順
+
 ## データ構造
 
 「セットid」を
